# policy_deployment

./: .gitignore  README.md  pyproject.toml  requirements.txt
deploy/: nginx.conf.example  policy-server.service
examples/: echo_policy.py  my_policy.py
scripts/: _client.py  launch.py  ping.py  smoke_test.py
server/: __init__.py  auth.py  msgpack_numpy.py  policy.py  schema.py  websocket_server.py
sim/: README.md  check_in_sim.py
sim/assets/: example_slim.pkl
sim/assets/robot_models/arm/dual_yam/: dual_yam_bimanual.xml
