[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-deployment"
version = "0.1.0"
description = "Public-IP-facing WebSocket server for serving robot policies."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=13.0",
    "msgpack>=1.0",
    "numpy>=1.23",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
client = [
    "Pillow>=9.0",
]

[tool.setuptools.packages.find]
include = ["server*", "examples*"]
